--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,7 @@
-version: '2.0'
+version: '3.3'
 services:
-  web:
-    build: .
-    ports:
-    - "5000:5000"
+  latex:
+    image: 'laurenss/texlive-full:2019'
+    user: 1000:1000
     volumes:
-    - .:/code
-    - logvolume01:/var/log
-    links:
-    - redis
-  redis:
-    image: redis
-volumes:
-  logvolume01: {}
+      - .:/data
