Fix build et all

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.3'
 services:
   latex:
-    image: 'laurenss/texlive-full:2019'
+    image: laurenss/texlive-full:2019
     user: 1000:1000
     volumes:
+      - ./policy.xml:/etc/ImageMagick-6/policy.xml
       - .:/data
